<resources>
    <string name="app_name">Orienteer</string>

    //Nav Items
    <string name="drawer_nav_open">open</string>
    <string name="drawer_nav_close">close</string>

    <string-array name="fragment_list">
        <item>Create Course</item>
        <item>My Courses</item>
        <item>Join Course</item>
        <item>Run Course</item>
    </string-array>

    <string name="action_settings">Settings</string>


    <string name="ServerAddress">http://ec2-52-10-104-141.us-west-2.compute.amazonaws.com</string>
    <string name="title_activity_create_course">CreateCourseActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="btnCreateCourse">Create Course</string>
    <string name="title_activity_run_course">RunCourseActivity</string>
    <string name="btn_start">Start</string>
    <string name="btn_remove">Remove Point</string>
    <string name="info_text">This app will allow you to create a course on a map to race and time how long it takes you to reach each point.</string>
    <string name="btn_race">Start Race</string>
    <string name="name">Course Name:</string>
    <string name="title_activity_my_courses">MyCourses</string>

    <string name="my_course">My Courses</string>
    <string name="btn_remove_course">Remove Course</string>
    <string name="btn_host_course">Host Course</string>

    <string name="title_activity_result_screen">ResultScreen</string>
    <string name="my_results">My Results:</string>
    <string name="other_results">Others total times:</string>
    <string name="home">Home</string>
    <string name="results">Results</string>
    <string name="run_offline">Run Solo/Offline</string>

</resources>
