<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="bit.cghill.glennsp1.orienteer.MenuScreens.MyCourses">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView2" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_course"
                android:id="@+id/textView"
                android:textSize="30dp" />

            <ListView
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:id="@+id/courseList"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:divider="@color/dark_accent_900"
                android:dividerHeight="1dp"
                android:choiceMode="singleChoice"
                android:listSelector="#09b5f6"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_remove_course"
                    android:id="@+id/btnRemoveCourse"
                    android:layout_weight="1"/>

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_host_course"
                    android:id="@+id/btnHost"
                    android:layout_weight="1"/>

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/run_offline"
                android:id="@+id/btnRunOffline" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
