<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="bit.cghill.glennsp1.orienteer.MenuScreens.FragmentCreateCourse">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:id="@+id/textView2"
            android:textSize="20dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nameBox"
            android:imeOptions="actionDone"
            android:singleLine="true"/>
    </LinearLayout>

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:name="com.google.android.gms.maps.MapFragment"/>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="114dp"
        android:id="@+id/pointList"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:divider="@color/dark_accent_900"
        android:dividerHeight="1dp"
        android:choiceMode="singleChoice"
        android:listSelector="#09b5f6" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnCreateCourse"
            android:id="@+id/btnCreateCourse" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_remove"
            android:id="@+id/btnRemove" />
    </LinearLayout>
</LinearLayout>
